# config-freeze-enforcer

./: .gitignore  CMakeLists.txt  README.md
src/: ConfigChecker.cpp  ConfigChecker.h  ConfigUpdater.cpp  ConfigUpdater.h
tests/: test_config_checker.cpp  test_config_updater.cpp
